--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/scss/reset.css" />
-    <link rel="stylesheet" href="../assets/scss/index.css" />
+    <link rel="stylesheet" href="./assets/scss/reset.css" />
+    <link rel="stylesheet" href="./assets/scss/index.css" />
     <link
       rel="stylesheet"
-      href="../assets/scss/responsive/responsive-index.css"
+      href="./assets/scss/responsive/responsive-index.css"
     />
     <link
       rel="stylesheet"
@@ -603,6 +603,6 @@
         </span>
       </div>
     </div>
-    <script src="../assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
