--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,9 @@
         </div>
         <nav>
           <ul id="navigation">
-            <li><a href="">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="">Articles</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="./contact.html">Contact</a></li>
             <li><a href="">Services</a></li>
           </ul>
