--- a/ru/index.html
+++ b/ru/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/scss/reset.css" />
-    <link rel="stylesheet" href="./assets/scss/index.css" />
+    <link rel="stylesheet" href="/assets/scss/reset.css" />
+    <link rel="stylesheet" href="/assets/scss/index.css" />
     <link
       rel="stylesheet"
-      href="./assets/scss/responsive/responsive-index.css"
+      href="../assets/scss/responsive/responsive-index.css"
     />
     <link
       rel="stylesheet"
@@ -38,7 +38,7 @@
               ><span>info@granuleplus.com</span>
             </p>
           </div>
-          <button>Offer Request</button>
+          <button>Сделай предложение</button>
           <div class="socials">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-telegram"></i></a>
@@ -49,7 +49,7 @@
           <div class="lang">
             <div class="custom-select">
               <div class="dropdown">
-                <button class="dropbtn">Language</button>
+                <button class="dropbtn">Язык</button>
                 <div class="dropdown-content">
                   <a href="#" data-value="az">Aze</a>
                   <a href="#" data-value="en">Eng</a>
@@ -70,11 +70,11 @@
         </div>
         <nav>
           <ul id="navigation">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./certificates.html">Certificates</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./services.html">Services</a></li>
+            <li><a href="">Домашняя страница</a></li>
+            <li><a href="">Сертификаты</a></li>
+            <li><a href="./about.html">О нас</a></li>
+            <li><a href="./contact.html">Контакт</a></li>
+            <li><a href="./services.html">Услуги</a></li>
           </ul>
         </nav>
         <div class="search">
@@ -103,46 +103,48 @@
               <div class="icon">
                 <i class="fa-brands fa-buromobelexperte"></i>
               </div>
-              <h3>Export of Granules</h3>
+              <h3>Экспорт гранул</h3>
             </div>
             <div class="card">
               <div class="icon">
                 <i class="fa-solid fa-recycle"></i>
               </div>
-              <h3>Recycled Pellets Supplier</h3>
+              <h3>Поставщик переработанных гранул</h3>
             </div>
             <div class="card">
               <div class="icon">
                 <i class="fa-solid fa-vial-circle-check"></i>
               </div>
-              <h3>Polymer Quality Control</h3>
+              <h3>Контроль качества полимеров</h3>
             </div>
             <div class="card">
               <div class="icon">
                 <i class="fa-solid fa-industry"></i>
               </div>
-              <h3>Producer and Supplier</h3>
+              <h3>Производитель и поставщик</h3>
             </div>
           </div>
           <div class="section-2-bottom">
             <div class="info-1">
               <div class="info">
                 <h2>
-                  <i class="fa-solid fa-section"></i>Recycled Pellets Supplier
+                  <i class="fa-solid fa-section"></i>Поставщик переработанных
+                  гранул
                 </h2>
                 <p>
-                  Granuleplus Company as a Recycled Pellets Supplier with more
-                  than 30 years of executive experience in the production and
-                  supply of recycled granules is one of the pioneers in the
-                  field of mechanical, chemical-industrial recycling in the
-                  field of polymer and plastic waste after consumption. The most
-                  important products of Granuleplus as a producer of recycled
-                  granules such as polypropylene abbreviated PP (Latin name:
-                  PP), acrylonitrile butadiene stern abbreviated ABS (Latin
-                  name: ABS), polyamide abbreviated PA with code 6 And 6.6
-                  (Latin name: Polyamid), Hypec (Latin name: High Impact
-                  Polystyrene for short HIPS). For information on the price of
-                  recycled plastic pellets, please contact our consultants.
+                  Компания Granuleplus как поставщик переработанных гранул с
+                  более чем 30-летним опытом работы в сфере производства и
+                  поставки переработанных гранул является одним из пионеров в
+                  области механической, химико-промышленной переработки в сфере
+                  полимерных и пластиковых отходов после потребления. Наиболее
+                  важные продукты Granuleplus как производителя переработанных
+                  гранул, такие как полипропилен, сокращенно PP (латинское
+                  название: PP), акрилонитрилбутадиен, сокращенно ABS (латинское
+                  название: ABS), полиамид, сокращенно PA с кодом 6 и 6.6
+                  (латинское название: Polyamid), Hypec (латинское название:
+                  High Impact Polystyrene, сокращенно HIPS). Для получения
+                  информации о цене переработанных пластиковых гранул,
+                  пожалуйста, свяжитесь с нашими консультантами.
                 </p>
               </div>
               <div class="info-img">
@@ -167,7 +169,8 @@
               </div>
               <div class="info">
                 <h2>
-                  Recycled Pellets Supplier <i class="fa-solid fa-section"></i>
+                  Поставщик переработанных гранул
+                  <i class="fa-solid fa-section"></i>
                 </h2>
                 <p>
                   Granuleplus Company as a Recycled Pellets Supplier with more
@@ -190,7 +193,7 @@
       </section>
       <section class="section-3">
         <div class="container">
-          <h2>Our Products</h2>
+          <h2>Наши продукты</h2>
           <div class="swiper scrollswiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -253,11 +256,11 @@
         </div>
       </section>
       <section class="section-4">
-        <h2>Production steps of recycled plastic pellets</h2>
+        <h2>Этапы производства гранул из переработанного пластика</h2>
         <div class="container">
           <div class="info">
-            <h3>Granuleplus from Production to Export</h3>
-            <h4>We give new life to plastic</h4>
+            <h3>Granuleplus от производства до экспорта</h3>
+            <h4>Мы даем новую жизнь пластику</h4>
             <p>
               You may have come across the term green economy or green supply
               chain by now. Behind each of these words lies a world of concept,
@@ -294,27 +297,27 @@
       </section>
       <section class="section-5">
         <div class="container">
-          <h2>Steps of Plastiv Recycling</h2>
+          <h2>Этапы переработки пластика</h2>
           <div class="cards">
             <div class="card">
               <div class="icon"><i class="fa-solid fa-trash-can"></i></div>
               <div class="number">1</div>
-              <p>Separating and crushing plastic</p>
+              <p>Разделение и дробление пластика</p>
             </div>
             <div class="card">
               <div class="icon"><i class="fa-solid fa-jug-detergent"></i></div>
               <div class="number">2</div>
-              <p>Washing plastic flakes step</p>
+              <p>Этап промывки пластиковых хлопьев</p>
             </div>
             <div class="card">
               <div class="icon"><i class="fa-solid fa-gears"></i></div>
               <div class="number">3</div>
-              <p>Drying & Production of recycled granules</p>
+              <p>Сушка и производство переработанных гранул</p>
             </div>
             <div class="card">
               <div class="icon"><i class="fa-solid fa-ship"></i></div>
               <div class="number">4</div>
-              <p>PackagingT Branding, Loading and shipping</p>
+              <p>УпаковкаT Брендинг, погрузка и доставка</p>
             </div>
           </div>
         </div>
@@ -322,28 +325,27 @@
       <section class="section-6">
         <div class="container">
           <div class="left">
-            <h2>Why Granuleplus is your choice?</h2>
+            <h2>Почему Granuleplus — ваш выбор?</h2>
             <p>
-              As a Recycled Pellets Supplier Having more than 30 years of
-              experience in recycling mechanical, chemical and industrial
-              materials
+              Как поставщик переработанных гранул, имеющий более 30 лет опыта в
+              переработке механических, химических и промышленных материалов
             </p>
             <div class="stats">
               <div class="stat">
                 <h3>100</h3>
-                <p>Quality Products</p>
+                <p>Качественная продукция</p>
               </div>
               <div class="stat">
                 <h3>30</h3>
-                <p>Work Experience</p>
+                <p>Опыт работы</p>
               </div>
               <div class="stat">
                 <h3>99</h3>
-                <p>Customer</p>
+                <p>Клиент</p>
               </div>
               <div class="stat">
                 <h3>1,000</h3>
-                <p>Completed projects</p>
+                <p>Завершенные проекты</p>
               </div>
             </div>
             <div class="icons">
@@ -365,7 +367,7 @@
       </section>
       <section class="section-7">
         <div class="container">
-          <h4>Plastic material recycling codes</h4>
+          <h4>Коды переработки пластиковых материалов</h4>
           <p>
             The following figure shows the plastic waste recycling symbol as
             follows. <br />
@@ -397,10 +399,11 @@
         <div class="container">
           <div class="left">
             <h4>
-              Granuleplus Exporter and Manufacturer of Recycled <br />
+              Granuleplus Экспортер и производитель переработанных материалов
               <br />
-              Plastic Granule. <br /><br />
-              Contact our consultants to get a quotation.
+              <br />
+              Пластиковая гранула. <br /><br />
+              Свяжитесь с нашими консультантами, чтобы получить расценки.
             </h4>
             <button>Contact Us</button>
           </div>
@@ -414,7 +417,7 @@
       </section>
       <section class="section-9">
         <div class="container">
-          <h5>Our Articles</h5>
+          <h5>Наши статьи</h5>
           <div class="swiper scrollswiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -428,7 +431,7 @@
                   <div class="companyname">
                     <p>GRANULEPLUS</p>
                   </div>
-                  <h3 class="title">How is Plastic made?</h3>
+                  <h3 class="title">Как производится пластик?</h3>
                   <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Pariatur, veritatis!
@@ -532,23 +535,23 @@
                 alt=""
               />
               <p>
-                GranulePlus proud of more than 30 years of operational
-                experience one of the leading factories in the field of
-                mechanical, chemical-industrial recycling in the field of
-                polymer waste and plastic after consumption.
+                GranulePlus гордится более чем 30-летним опытом работы, одним из
+                ведущих заводов в области механической, химико-промышленной
+                переработки в области полимерных отходов и пластика после
+                потребления.
               </p>
             </div>
             <div class="col-2">
-              <p>Quick Acces</p>
+              <p>Быстрый доступ</p>
               <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Contact</li>
-                <li>Services</li>
+                <li>Дом</li>
+                <li>О нас</li>
+                <li>Контакт</li>
+                <li>Услуги</li>
               </ul>
             </div>
             <div class="col-3">
-              <p>Location</p>
+              <p>Расположение</p>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.9150495305657!2d49.84769951196354!3d40.34423045992899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307c19888a3a81%3A0xc253fcb6c530cf3!2sBaku%20Crystal%20Hall!5e0!3m2!1saz!2saz!4v1721904521129!5m2!1saz!2saz"
                 width="600"
@@ -564,8 +567,8 @@
       </div>
       <div class="footer-end">
         <p>
-          All rights of this site belong to Granuleplus |
-          <span>Design By Alizadeh</span>
+          Все права на этот сайт принадлежат Granuleplus |
+          <span>Дизайн Ализаде</span>
         </p>
       </div>
     </footer>
@@ -586,7 +589,7 @@
         </span>
       </div>
     </div>
-    <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/lang.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/lang.js"></script>
   </body>
 </html>
