--- a/ru/about.html
+++ b/ru/about.html
@@ -43,15 +43,32 @@
           </div>
           <div class="lang">
             <div class="custom-select">
-              <div class="dropdown">
-                <button class="dropbtn">Language</button>
-                <div class="dropdown-content">
-                  <a href="#" data-value="az">Aze</a>
-                  <a href="#" data-value="en">Eng</a>
-                  <a href="#" data-value="ru">Русc</a>
-                  <a href="#" data-value="tr">Türk</a>
-                </div>
-              </div>
+              <select id="language-select">
+                <option
+                  value="turkey"
+                  data-image="./assets/img/languages/turkey.jpeg"
+                >
+                  Turk
+                </option>
+                <option
+                  value="russian"
+                  data-image="./assets/img/languages/russia.jpeg"
+                >
+                  Rus
+                </option>
+                <option
+                  value="english"
+                  data-image="./assets/img/languages/english.jpeg"
+                >
+                  Eng
+                </option>
+                <option
+                  value="iran"
+                  data-image="./assets/img/languages/iran.jpeg"
+                >
+                  Iran
+                </option>
+              </select>
             </div>
           </div>
         </div>
@@ -66,7 +83,7 @@
         <nav>
           <ul id="navigation">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./certificates.html">Certificates</a></li>
+            <li><a href="">Articles</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./contact.html">Contact</a></li>
             <li><a href="./services.html">Services</a></li>
