Adding another lang

--- a/az/contact.html
+++ b/az/contact.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/scss/reset.css" />
-    <link rel="stylesheet" href="./assets/scss/contactUs.css" />
+    <link rel="stylesheet" href="/assets/scss/reset.css" />
+    <link rel="stylesheet" href="/assets/scss/contactUs.css" />
     <link
       rel="stylesheet"
-      href="./assets/scss/responsive/responsive-contact.css"
+      href="/assets/scss/responsive/responsive-contact.css"
     />
     <link
       rel="stylesheet"
@@ -29,11 +29,11 @@
           <div class="contact">
             <p><i class="fa-solid fa-phone"></i><span>+98 9194451528</span></p>
             <p>
-              <i class="fa-solid fa-envelope"></i
-              ><span>info@granuleplus.com</span>
+              <i class="fa-solid fa-envelope"></i>
+              <span>info@granuleplus.com</span>
             </p>
           </div>
-          <button>Offer Request</button>
+          <button>Teklif Tələbi</button>
           <div class="socials">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-telegram"></i></a>
@@ -43,32 +43,15 @@
           </div>
           <div class="lang">
             <div class="custom-select">
-              <select id="language-select">
-                <option
-                  value="turkey"
-                  data-image="./assets/img/languages/turkey.jpeg"
-                >
-                  Turk
-                </option>
-                <option
-                  value="russian"
-                  data-image="./assets/img/languages/russia.jpeg"
-                >
-                  Rus
-                </option>
-                <option
-                  value="english"
-                  data-image="./assets/img/languages/english.jpeg"
-                >
-                  Eng
-                </option>
-                <option
-                  value="iran"
-                  data-image="./assets/img/languages/iran.jpeg"
-                >
-                  Iran
-                </option>
-              </select>
+              <div class="dropdown">
+                <button class="dropbtn">Dil</button>
+                <div class="dropdown-content">
+                  <a href="#" data-value="az">Az</a>
+                  <a href="#" data-value="en">İng</a>
+                  <a href="#" data-value="ru">Rus</a>
+                  <a href="#" data-value="tr">Türk</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -82,11 +65,11 @@
         </div>
         <nav>
           <ul id="navigation">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="">Articles</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./services.html">Services</a></li>
+            <li><a href="./index.html">Ana Səhifə</a></li>
+            <li><a href="./certificates.html">Sertifikatlar</a></li>
+            <li><a href="./about.html">Haqqımızda</a></li>
+            <li><a href="./contact.html">Əlaqə</a></li>
+            <li><a href="./services.html">Xidmətlər</a></li>
           </ul>
         </nav>
         <div class="search">
@@ -98,25 +81,26 @@
         </div>
       </div>
     </header>
+
     <main>
       <div class="section-1">
         <div class="container">
-          <h1>Contact Us</h1>
+          <h1>Bizimlə Əlaqə</h1>
         </div>
       </div>
       <div class="section-2">
         <div class="container">
-          <h1>Contact GranulePlus</h1>
+          <h1>GranulePlus ilə Əlaqə</h1>
           <p>
-            Granuleplus Company is one of the producers and suppliers of
-            recycled plastic granules and compounds. To get more information
-            about the desired product type, price, purchase, sale and export and
-            import, please contact us.
+            Granuleplus Şirkəti, geri dönüştürülmüş plastik granulları və
+            komponentlərinin istehsalçısı və təchizatçısıdır. İstədiyiniz məhsul
+            növü, qiymət, alış, satış, ixrac və idxal haqqında daha ətraflı
+            məlumat üçün bizimlə əlaqə saxlayın.
           </p>
           <div class="boxes">
             <div class="box">
               <i class="fa-solid fa-phone-volume"></i>
-              <h4>Phone Number</h4>
+              <h4>Telefon Nömrəsi</h4>
               <p>
                 +98 9194451528 <br />
                 +9821 56512397
@@ -132,10 +116,10 @@
             </div>
             <div class="box">
               <i class="fa-solid fa-map-location-dot"></i>
-              <h4>Address</h4>
+              <h4>Ünvan</h4>
               <p>
                 No. 40, Tabnak Dead End, Etrat Alley, 17 Shahriver St., Mahdi
-                Abad, Qom old road,
+                Abad, Qom köhnə yolu,
               </p>
             </div>
           </div>
@@ -147,16 +131,16 @@
             <label for="email">Email</label>
             <input type="email" id="email" required />
 
-            <label for="fullname">Full Name</label>
+            <label for="fullname">Tam Ad</label>
             <input type="text" id="fullname" required />
 
-            <label for="phone">Phone Number</label>
+            <label for="phone">Telefon Nömrəsi</label>
             <input type="tel" id="phone" required />
 
-            <label for="message">Message</label>
+            <label for="message">Mesaj</label>
             <textarea id="message" required></textarea>
 
-            <button onclick="sendEmail()">Send</button>
+            <button onclick="sendEmail()">Göndər</button>
           </div>
           <div class="map">
             <iframe
@@ -172,6 +156,7 @@
         </div>
       </div>
     </main>
+
     <footer>
       <div class="footer-start">
         <div class="socials">
@@ -191,23 +176,22 @@
                 alt=""
               />
               <p>
-                GranulePlus proud of more than 30 years of operational
-                experience one of the leading factories in the field of
-                mechanical, chemical-industrial recycling in the field of
-                polymer waste and plastic after consumption.
+                GranulePlus, 30 ildən çox əməliyyat təcrübəsi ilə polimer
+                tullantıları və plastik istifadəsindən sonra geri dönüşüm
+                sahəsində öncül fabrikin biridir.
               </p>
             </div>
             <div class="col-2">
-              <p>Quick Acces</p>
+              <p>Sürətli Giriş</p>
               <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Contact</li>
-                <li>Services</li>
+                <li>Ana Səhifə</li>
+                <li>Haqqımızda</li>
+                <li>Əlaqə</li>
+                <li>Xidmətlər</li>
               </ul>
             </div>
             <div class="col-3">
-              <p>Location</p>
+              <p>Yerləşmə</p>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.9150495305657!2d49.84769951196354!3d40.34423045992899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307c19888a3a81%3A0xc253fcb6c530cf3!2sBaku%20Crystal%20Hall!5e0!3m2!1saz!2saz!4v1721904521129!5m2!1saz!2saz"
                 width="600"
@@ -223,11 +207,12 @@
       </div>
       <div class="footer-end">
         <p>
-          All rights of this site belong to Granuleplus |
-          <span>Design By Alizadeh</span>
+          Bu saytın bütün hüquqları Granuleplus-a məxsusdur |
+          <span>Alizadeh tərəfindən Dizayn Edilmişdir</span>
         </p>
       </div>
     </footer>
+
     <div class="floating-container">
       <div class="floating-button"><i class="fa-solid fa-share-nodes"></i></div>
       <div class="element-container">
@@ -246,5 +231,6 @@
       </div>
     </div>
   </body>
-  <script src="./assets/js/contact.js"></script>
+  <script src="/assets/js/contact.js"></script>
+  <script src="/assets/js/lang.js"></script>
 </html>
