--- a/ru/contact.html
+++ b/ru/contact.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/scss/reset.css" />
-    <link rel="stylesheet" href="./assets/scss/contactUs.css" />
+    <link rel="stylesheet" href="/assets/scss/reset.css" />
+    <link rel="stylesheet" href="/assets/scss/contactUs.css" />
     <link
       rel="stylesheet"
-      href="./assets/scss/responsive/responsive-contact.css"
+      href="/assets/scss/responsive/responsive-contact.css"
     />
     <link
       rel="stylesheet"
@@ -29,11 +29,11 @@
           <div class="contact">
             <p><i class="fa-solid fa-phone"></i><span>+98 9194451528</span></p>
             <p>
-              <i class="fa-solid fa-envelope"></i
-              ><span>info@granuleplus.com</span>
+              <i class="fa-solid fa-envelope"></i>
+              <span>info@granuleplus.com</span>
             </p>
           </div>
-          <button>Offer Request</button>
+          <button>Запрос предложения</button>
           <div class="socials">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-telegram"></i></a>
@@ -43,32 +43,15 @@
           </div>
           <div class="lang">
             <div class="custom-select">
-              <select id="language-select">
-                <option
-                  value="turkey"
-                  data-image="./assets/img/languages/turkey.jpeg"
-                >
-                  Turk
-                </option>
-                <option
-                  value="russian"
-                  data-image="./assets/img/languages/russia.jpeg"
-                >
-                  Rus
-                </option>
-                <option
-                  value="english"
-                  data-image="./assets/img/languages/english.jpeg"
-                >
-                  Eng
-                </option>
-                <option
-                  value="iran"
-                  data-image="./assets/img/languages/iran.jpeg"
-                >
-                  Iran
-                </option>
-              </select>
+              <div class="dropdown">
+                <button class="dropbtn">Язык</button>
+                <div class="dropdown-content">
+                  <a href="#" data-value="az">Аз</a>
+                  <a href="#" data-value="en">Анг</a>
+                  <a href="#" data-value="ru">Рус</a>
+                  <a href="#" data-value="tr">Тур</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -82,11 +65,11 @@
         </div>
         <nav>
           <ul id="navigation">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="">Articles</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./services.html">Services</a></li>
+            <li><a href="./index.html">Главная</a></li>
+            <li><a href="./certificates.html">Сертификаты</a></li>
+            <li><a href="./about.html">О нас</a></li>
+            <li><a href="./contact.html">Контакты</a></li>
+            <li><a href="./services.html">Услуги</a></li>
           </ul>
         </nav>
         <div class="search">
@@ -98,25 +81,26 @@
         </div>
       </div>
     </header>
+
     <main>
       <div class="section-1">
         <div class="container">
-          <h1>Contact Us</h1>
+          <h1>Связаться с нами</h1>
         </div>
       </div>
       <div class="section-2">
         <div class="container">
-          <h1>Contact GranulePlus</h1>
+          <h1>Связаться с GranulePlus</h1>
           <p>
-            Granuleplus Company is one of the producers and suppliers of
-            recycled plastic granules and compounds. To get more information
-            about the desired product type, price, purchase, sale and export and
-            import, please contact us.
+            Компания Granuleplus является одним из производителей и поставщиков
+            гранул и компаундов из переработанного пластика. Для получения
+            дополнительной информации о типе желаемого продукта, цене, покупке,
+            продаже, экспорте и импорте, пожалуйста, свяжитесь с нами.
           </p>
           <div class="boxes">
             <div class="box">
               <i class="fa-solid fa-phone-volume"></i>
-              <h4>Phone Number</h4>
+              <h4>Телефон</h4>
               <p>
                 +98 9194451528 <br />
                 +9821 56512397
@@ -124,7 +108,7 @@
             </div>
             <div class="box">
               <i class="fa-solid fa-envelope"></i>
-              <h4>Email</h4>
+              <h4>Электронная почта</h4>
               <p>
                 info@granuleplus.com <br />
                 granuleplus@gmail.com
@@ -132,7 +116,7 @@
             </div>
             <div class="box">
               <i class="fa-solid fa-map-location-dot"></i>
-              <h4>Address</h4>
+              <h4>Адрес</h4>
               <p>
                 No. 40, Tabnak Dead End, Etrat Alley, 17 Shahriver St., Mahdi
                 Abad, Qom old road,
@@ -144,19 +128,19 @@
       <div class="section-3">
         <div class="container">
           <div class="form">
-            <label for="email">Email</label>
+            <label for="email">Электронная почта</label>
             <input type="email" id="email" required />
 
-            <label for="fullname">Full Name</label>
+            <label for="fullname">Полное имя</label>
             <input type="text" id="fullname" required />
 
-            <label for="phone">Phone Number</label>
+            <label for="phone">Телефон</label>
             <input type="tel" id="phone" required />
 
-            <label for="message">Message</label>
+            <label for="message">Сообщение</label>
             <textarea id="message" required></textarea>
 
-            <button onclick="sendEmail()">Send</button>
+            <button onclick="sendEmail()">Отправить</button>
           </div>
           <div class="map">
             <iframe
@@ -172,6 +156,7 @@
         </div>
       </div>
     </main>
+
     <footer>
       <div class="footer-start">
         <div class="socials">
@@ -191,23 +176,23 @@
                 alt=""
               />
               <p>
-                GranulePlus proud of more than 30 years of operational
-                experience one of the leading factories in the field of
-                mechanical, chemical-industrial recycling in the field of
-                polymer waste and plastic after consumption.
+                GranulePlus гордится более чем 30-летним операционным опытом и
+                является одной из ведущих фабрик в области механической,
+                химической и промышленной переработки полимерных отходов и
+                пластика после потребления.
               </p>
             </div>
             <div class="col-2">
-              <p>Quick Acces</p>
+              <p>Быстрый доступ</p>
               <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Contact</li>
-                <li>Services</li>
+                <li>Главная</li>
+                <li>О нас</li>
+                <li>Контакты</li>
+                <li>Услуги</li>
               </ul>
             </div>
             <div class="col-3">
-              <p>Location</p>
+              <p>Местоположение</p>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.9150495305657!2d49.84769951196354!3d40.34423045992899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307c19888a3a81%3A0xc253fcb6c530cf3!2sBaku%20Crystal%20Hall!5e0!3m2!1saz!2saz!4v1721904521129!5m2!1saz!2saz"
                 width="600"
@@ -223,11 +208,12 @@
       </div>
       <div class="footer-end">
         <p>
-          All rights of this site belong to Granuleplus |
-          <span>Design By Alizadeh</span>
+          Все права на этот сайт принадлежат Granuleplus |
+          <span>Дизайн от Alizadeh</span>
         </p>
       </div>
     </footer>
+
     <div class="floating-container">
       <div class="floating-button"><i class="fa-solid fa-share-nodes"></i></div>
       <div class="element-container">
@@ -246,5 +232,6 @@
       </div>
     </div>
   </body>
-  <script src="./assets/js/contact.js"></script>
+  <script src="/assets/js/contact.js"></script>
+  <script src="/assets/js/lang.js"></script>
 </html>
