--- a/services.html
+++ b/services.html
@@ -194,4 +194,5 @@
     </div>
   </body>
   <script src="./assets/js/services.js"></script>
+  <script src="./assets/js/lang.js"></script>
 </html>
