--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="bottom-header">
         <div class="logo">
-          <img src="./assets/img/logomain.png" alt="" />
+          <img src="/assets/img/logomain.png" alt="" />
         </div>
         <nav>
           <ul id="navigation">
