--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             src="https:\/\/granuleplus.com\/wp-content\/uploads\/2022\/05\/VID-20220224-WA0019.mp4"
             type="video/mp4"
           />
-          Your browser does not support the video tag
+          Your browser does not support the video tag.
         </video>
       </section>
       <section class="section-2">
