Change some tags

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             has become an important capability. In this era, the circular and
             green economy (resource-based economy) plays an important role and
             we are happy to be one of the pioneers in this recycling industry.
-            Granule Plus has made it its goal to help strengthen the circular
+            Polyx has made it its goal to help strengthen the circular
             economy by increasing the supply of quality recycled plastics to
             industry, so that it can make a small contribution to reducing the
             use of virgin plastics in packaging and industry, and for a more
