--- a/ru/about.html
+++ b/ru/about.html
@@ -97,7 +97,7 @@
             быстро растет, поэтому управление отходами стало важным навыком. В
             наше время циклическая и зеленая экономика (экономика на основе
             ресурсов) играют важную роль, и мы гордимся тем, что являемся одним
-            из пионеров в этой сфере переработки. Granule Plus стремится
+            из пионеров в этой сфере переработки. Polyx стремится
             увеличить предложение качественного переработанного пластика в
             индустрии, сократить использование первичного пластика в упаковке и
             производстве и внести небольшой вклад в более устойчивое будущее.
